调整PersistenceObject为无中心节点